# nexusSAAS

./: .gitignore  README.md  design.md
.github/workflows/: build-and-deploy.yml  build-runtime-image.yml
apps/web/: Dockerfile  package-lock.json  package.json
deploy/: STAGING_CHECKLIST.md
deploy/control-vps/: README.md  backup-control.sh  docker-compose.yml
deploy/coolify-vps1/: README.md  control-plane.env.example  web.env.example
scripts/: build-runtime-image.sh  local-down.sh  local-logs.sh  local-up.sh
services/control-plane/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt  test_control_plane.db  test_control_plane_contracts.db  test_control_plane_ws.db
services/control-plane/alembic/: env.py
services/control-plane/alembic/versions/: 20260210_000001_initial_schema.py
services/control-plane/app/: assistant_defaults.py  config.py  crypto.py  db.py  deps.py  events.py  google_oauth.py  main.py  models.py  rate_limit.py  runner_client.py  schemas.py  security.py
services/control-plane/app/routers/: auth.py  events_ws.py  tenants.py
services/control-plane/scripts/: start.sh
services/control-plane/tests/: test_api_contracts.py  test_auth_tenant.py  test_events_manager.py  test_websocket_events.py
services/runner/: Dockerfile  pyproject.toml  requirements.txt
services/runner/app/: auth.py  config.py  main.py  monitor.py  publisher.py  runtime_manager.py  schemas.py
services/runner/tests/: test_auth_contracts.py  test_health_contract.py  test_monitor.py  test_monitor_lifecycle.py  test_publisher.py  test_runtime_manager.py
(+27 files in other folders)
